# EIT_cooling

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: fano_test.cpp  simulation.cpp  simulation_caf.cpp
include/: atomic_states.hpp  caf_states.hpp  chance_of_jump.hpp  constants.hpp  define_params.hpp  hamiltonian.hpp  simulation.hpp  stochastic_schrodinger.hpp  stochastic_schrodinger_spin_motion.hpp
include/CaF/: half_integer.hpp  hunds_case_b.hpp  state_hamiltonian.hpp  wigner_symbol.hpp
src/: atomic_states.cpp  caf_states.cpp  chance_of_jump.cpp  define_params.cpp  hamiltonian.cpp  simulation.cpp  stochastic_schrodinger.cpp  stochastic_schrodinger_spin_motion.cpp
src/CaF/: hunds_case_b.cpp  state_hamiltonian.cpp  wigner_symbol.cpp
tests/: CMakeLists.txt  test_build_H_pm.cpp  test_build_H_zero.cpp  test_caf_structure.cpp  test_chance_of_jump.cpp  test_magnus2.cpp  test_overlap_from_k.cpp  test_wigner_symbol.cpp
